[project]
name = "bytes"
version = "0.0.1.dev1"
description = "KAT's forensic data store"
maintainers = [{name = "MinVWS", email = "maintainer@openkat.nl"}]
license = {text = "EUPL"}
requires-python = ">= 3.10"
dependencies = [
  "alembic >= 1.8.1",
  "cachetools >= 5.3.1",
  "fastapi-slim >= 0.111.0",
  "httpx >= 0.27.0",
  "passlib[bcrypt] >= 1.7.4",
  "pika >= 1.3.1",
  "prometheus-client >= 0.16.0",
  "psycopg2 >= 2.9.6",
  "pydantic >= 2.7.1",
  "pydantic-settings >= 2.2.1",
  "pyjwt >= 2.8.0",
  "pynacl >= 1.5.0",
  "python-multipart >= 0.0.9",
  "rfc3161ng >= 2.1.3",
  "sqlalchemy >= 1.4.48",
  "structlog >= 24.2.0",
  "uvicorn >= 0.29.0",

   # OpenTelemetry
  "opentelemetry-api >= 1.25.0",
  "opentelemetry-exporter-otlp-proto-common >= 1.25.0",
  "opentelemetry-exporter-otlp-proto-grpc >= 1.25.0",
  "opentelemetry-instrumentation >= 0.46b0",
  "opentelemetry-instrumentation-asgi >= 0.46b0",
  "opentelemetry-instrumentation-dbapi >= 0.46b0",
  "opentelemetry-instrumentation-fastapi >= 0.46b0",
  "opentelemetry-instrumentation-httpx >= 0.46b0",
  "opentelemetry-instrumentation-psycopg2 >= 0.46b0",
  "opentelemetry-proto >= 1.25.0",
  "opentelemetry-sdk >= 1.25.0",
  "opentelemetry-semantic-conventions >= 0.46b0",
  "opentelemetry-util-http >= 0.46b0",
]

[project.optional-dependencies]
dev = [
  "pytest >= 8.2.0",
  "pytest-env >= 1.1.3",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
